<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="16dp">

    <!-- Top TextView -->
    <TextView
        android:id="@+id/topTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_txt"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="0dp" />

    <!-- Button 1 -->
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        android:textColor="@android:color/black"
        android:background="@drawable/btn_green"
        android:layout_marginBottom="0dp"
        android:gravity="center" />

    <!-- Button 2 -->
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:textColor="@android:color/black"
        android:background="@drawable/btn_yellow"
        android:layout_marginBottom="0dp"
        android:gravity="center" />

    <!-- Button 3 -->
    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_3"
        android:textColor="@android:color/black"
        android:background="@drawable/btn_blue"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        />

    <!-- Button 4 -->
    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_4"
        android:textColor="@android:color/black"
        android:background="@drawable/btn_pink"
        android:layout_marginBottom="25dp"
        android:gravity="center" />

    <!-- Bottom TextView -->
    <TextView
        android:id="@+id/bottomTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/footer_txt"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/green" />

</LinearLayout>
